# thorin

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: error.rs  lib.rs  main.rs  package.rs  relocate.rs  util.rs
tests/: absolute-paths.test  archive-with-arbitrary.test  archive.test  columns.test  compress-fail.test  compress.test  cu-and-tu-info-section-v5.s  debug-macro-v5.s  duplicate.test  dwos-list-from-exec-simple.test  empty.test  gcc-type.test  handle-strx.test  help.test  incompatible-cu-index-versions.s  incompatible-tu-index-version.s  info-v5.s  invalid-cu-header-length-type.s  invalid-cu-header-length.s  invalid-cu-header-version.s  invalid-cu-index.test  invalid-string-form.test  invalid-tu-header-length.s  lit.cfg.py  loclists.s  merge.test  missing-dwo-id.test  missing-tu-index.test  multiple-debug-info-sections-in-dwp.s  multiple-type-sections.test  no-cu-found.s  non-cu-top-level.test  rnglists.s  simple.test  tu-units-v5.s  type-dedup-v5.test  type-dedup.test  unknown-section-id.s  wrong-unit-type-info-v4.s
tests/inputs/: columns-a.dwo  columns-b.dwo
thorin/: Cargo.toml  README.md
thorin-bin/: Cargo.toml  README.md
thorin-bin/src/: main.rs
thorin/src/: error.rs  ext.rs  index.rs  lib.rs  marker.rs  package.rs  relocate.rs  strings.rs  util.rs
