[package]
name = "thorin-dwp-bin"
authors = [ "David Wood <david.wood@huawei.com>" ]
categories = ["development-tools::debugging", "command-line-utilities"]
description = "Merge DWARF objects and packages into DWARF packages"
homepage = "https://github.com/rust-lang/thorin"
keywords = ["dwarf", "split-dwarf", "dwarf-package", "dwarf-object", "dwp"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/thorin"
version = "0.8.0"
edition = "2021"

[dependencies]
thorin-dwp = { version = "0.8.0", path = "../thorin" }

anyhow = "1.0.51"
memmap2 = "0.5.0"
structopt = "0.3.25"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
tracing-tree = "0.2.3"
typed-arena = "2.0.1"

[dependencies.object]
version = "0.36.0"
default-features = false
features = [ "archive", "read", "write", "compression" ]

[[bin]]
name = "thorin"
path = "src/main.rs"
