[package]
name = "thorin-dwp-bin"
authors = [ "David Wood <david.wood@huawei.com>" ]
categories = ["development-tools::debugging", "command-line-utilities"]
description = "Merge DWARF objects and packages into DWARF packages"
homepage = "https://github.com/rust-lang/thorin"
keywords = ["dwarf", "split-dwarf", "dwarf-package", "dwarf-object", "dwp"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/thorin"
version = "0.9.0"
edition = "2021"

[dependencies]
thorin-dwp = { version = "0.9.0", path = "../thorin" }

anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
memmap2 = "0.9.10"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [ "env-filter" ] }
tracing-tree = "0.4.1"
typed-arena = "2.0.2"

[dependencies.object]
version = "0.38.0"
default-features = false
features = [ "archive", "read", "write", "compression" ]

[[bin]]
name = "thorin"
path = "src/main.rs"
