[package]
name = "thorin"
authors = [ "David Wood <david.wood@huawei.com>" ]
description = "Merge dwarf objects into dwarf packages"
license = "Apache-2.0/MIT"
readme = "../README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "1.7.0"
tracing = "0.1.29"

[dependencies.gimli]
version  = "0.26.1"
default-features = false
# `gimli/std` pulls in `fallible-iterator` which we don't use, but can't opt out of, because of
# cargo#8832.
features = [ "read", "write", "std" ]

[dependencies.object]
version  = "0.27.1"
default-features = false
features = [ "archive", "read", "write", "compression" ]
